 ################################################################################
 #    Copyright (C) 2014 GSI Helmholtzzentrum fuer Schwerionenforschung GmbH    #
 #                                                                              #
 #              This software is distributed under the terms of the             # 
 #         GNU Lesser General Public Licence version 3 (LGPL) version 3,        #  
 #                  copied verbatim in the file "LICENSE"                       #
 ################################################################################
add_subdirectory(src)

#Install(DIRECTORY macros
#        DESTINATION share/fairbase/example/Tutorial5
#        PATTERN ".svn" EXCLUDE
#       )
